Footer overflow issue

--- a/enzedonline/static/css/enzedonline.css
+++ b/enzedonline/static/css/enzedonline.css
@@ -638,6 +638,7 @@ a {
 
 .footer {
   width: 100% !important;
+  overflow: hidden;
 }
 
 .privacy-notice {
